# python-poetry-cicd

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py  test_example.py
.github/actions/setup/: action.yaml
.github/scripts/: check-version-changed.sh  get-version.py  is-version-bigger.py
.github/workflows/: cd.yaml  ci.yaml
python_cicd/: add.py
src/: add.py
