[tool.poetry]
name = "python_cicd"
version = "0.4.0"
description = ""
authors = ["Daniel Kneipp <daniel.kneipp@outlook.com>"]

[tool.poetry.dependencies]
python = "3.10.5"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
black = "22.6.0"
pre-commit = "2.20.0"
pytest-cov = "3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
exclude = '''
(
  /(
      \.git
    | \.github
  )/
)
'''
